--- a/type-eq.cabal
+++ b/type-eq.cabal
@@ -1,6 +1,6 @@
 name:          type-eq
 category:      Type System
-version:       0.1.3
+version:       0.2
 author:        Gábor Lehel
 maintainer:    Gábor Lehel <illissius@gmail.com>
 homepage:      http://github.com/glehel/type-eq
@@ -14,15 +14,13 @@ synopsis:      Type equality evidence you can carry around
 description:
     This package provides types and combinators to store and manipulate evidence of equality between types.
     .
-    To take advantage of kind-polymorphism when it is available but not require it, it is split into the following primary modules:
+    To take advantage of kind polymorphism when it is available but not require it, it is split into the following primary modules:
     .
         - @/Type.Eq/@: Types and combinators which can be kind-polymorphic if @PolyKinds@ are available, but are specific to kind @*@ otherwise.
     .
         - @/Type.Eq.Higher/@: Kind-monomorphic types and combinators of higher kind, up to @* -> * -> *@.
     .
-        - @/Type.Eq.Poly/@: Combinators that require kind-polymorphism. This module is only available if @PolyKinds@ are available.
-    .
-    Support for kind-polymorphism first appeared with GHC 7.4, but because it is too buggy to be practical, it will only be enabled with GHC 7.6.
+        - @/Type.Eq.Poly/@: Combinators that require kind polymorphism. This module is only available if @PolyKinds@ are available.
     .
     Major required extensions: @GADTs@, @TypeFamilies@ (for @~@), @Rank2Types@, @TypeOperators@
     .
@@ -89,9 +87,9 @@ library
     if impl(ghc >= 7.2)
         other-extensions: Trustworthy
 
---    if impl(ghc >= 7.6)
---        exposed-modules:  Type.Eq.Poly
---        other-extensions: PolyKinds, Unsafe
+    if impl(ghc >= 7.6)
+        exposed-modules:  Type.Eq.Poly
+        other-extensions: PolyKinds, Unsafe
 
     include-dirs: .
 
