stupid cabal *still* doesn't recognize PolyKinds and Unsafe as extensions

--- a/type-eq.cabal
+++ b/type-eq.cabal
@@ -89,7 +89,7 @@ library
 
     if impl(ghc >= 7.6)
         exposed-modules:  Type.Eq.Poly
-        other-extensions: PolyKinds, Unsafe
+--        other-extensions: PolyKinds, Unsafe
 
     include-dirs: .
 
