--- a/type-eq.cabal
+++ b/type-eq.cabal
@@ -1,10 +1,10 @@
 name:          type-eq
 category:      Type System
-version:       0.3
+version:       0.4
 author:        Gábor Lehel
-maintainer:    Gábor Lehel <illissius@gmail.com>
-homepage:      http://github.com/glehel/type-eq
-copyright:     Copyright (C) 2012 Gábor Lehel
+maintainer:    Gábor Lehel <glaebhoerl@gmail.com>
+homepage:      http://github.com/glaebhoerl/type-eq
+copyright:     Copyright (C) 2012-2013 Gábor Lehel
 license:       BSD3
 license-file:  LICENSE
 stability:     experimental
@@ -44,7 +44,7 @@ extra-source-files: macros.h
 
 source-repository head
     type:      git
-    location:  git://github.com/glehel/type-eq.git
+    location:  git://github.com/glaebhoerl/type-eq.git
 
 library
     default-language:
@@ -60,7 +60,7 @@ library
         FlexibleContexts
 
     build-depends:
-        base >= 3.0 && < 4.7
+        base >= 3.0 && < 4.8
 
     exposed-modules:
         Type.Eq
